<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="24dp">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/public_key_input_view_title"
        android:textAppearance="@style/textTitleSecondary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/personalPublicKeyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/public_key_input_view_personal_public_key_input_hint"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:helperTextEnabled="true"
        app:helperText="@string/public_key_input_view_personal_public_key_helper"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_round_content_copy_24"
        app:endIconContentDescription="Copy public key icon">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/personalPublicKeyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/personalPrivateKeyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/public_key_input_view_personal_private_key_hint"
        app:layout_constraintTop_toBottomOf="@id/personalPublicKeyLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:helperTextEnabled="true"
        app:helperText="@string/public_key_input_view_personal_private_key_helper"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_round_upload_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/personalPrivateKeyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:id="@+id/generateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/public_key_input_view_generate_button"
        app:icon="@drawable/ic_round_autorenew_24"
        app:layout_constraintTop_toBottomOf="@id/personalPrivateKeyLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"/>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerInsetStart="16dp"
        app:dividerInsetEnd="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/generateButton"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/recipientPublicKeyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:hint="@string/public_key_input_view_recipient_public_key_hint"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:helperTextEnabled="true"
        app:helperText="@string/public_key_input_view_recipient_public_key_helper"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_round_qr_code_scanner_24"
        app:endIconContentDescription="Copy public key icon">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recipientPublicKeyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>