<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewKeyPairFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/viewAppToolBar"
            layout="@layout/view_app_toolbar"/>

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/new_key_pair_fragment_title"
            android:textAppearance="@style/textTitleSecondary"
            app:layout_constraintTop_toBottomOf="@id/viewAppToolBar"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/personalPublicKeyLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/public_key_input_view_personal_public_key_input_hint"
            app:layout_constraintTop_toBottomOf="@id/titleText"
            app:layout_constraintStart_toStartOf="parent"
            app:helperTextEnabled="true"
            app:helperText="@string/public_key_input_view_personal_public_key_helper"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_round_content_copy_24"
            app:endIconContentDescription="Copy public key icon">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/personalPublicKeyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/personalPrivateKeyLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/public_key_input_view_personal_private_key_hint"
            app:layout_constraintTop_toBottomOf="@id/personalPublicKeyLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:helperTextEnabled="true"
            app:helperText="@string/public_key_input_view_personal_private_key_helper"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_round_content_copy_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/personalPrivateKeyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textVisiblePassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:id="@+id/generateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/new_key_pair_fragment_generate_button"
            app:icon="@drawable/ic_round_autorenew_24"
            app:layout_constraintTop_toBottomOf="@id/personalPrivateKeyLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:shapeAppearance="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"/>

        <Button
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:id="@+id/exportPrivateKeyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/new_key_pair_fragment_export_button"
            android:visibility="invisible"
            app:icon="@drawable/ic_round_download_24"
            app:layout_constraintTop_toBottomOf="@id/personalPrivateKeyLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:shapeAppearance="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/shareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/generic_next_action_button_description"
            android:src="@drawable/ic_outline_share_24"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:shapeAppearance="@style/ShapeAppearanceOverlay.Material3.Button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/bottomSheetBackground"
        android:background="#99000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <include
        android:id="@+id/viewShareBottomSheet"
        layout="@layout/view_share_bottom_sheet" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>