<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PasswordFragment">

    <include
        android:id="@+id/viewAppToolBar"
        layout="@layout/view_app_toolbar"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/modeTabSelector"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:tabMode="fixed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewAppToolBar"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_fragment_password_tab_title"
            android:icon="@drawable/ic_round_password_24"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_fragment_public_key_tab_title"
            android:icon="@drawable/ic_round_key_24"/>
    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/modeTabSelector"
        app:layout_constraintStart_toStartOf="parent">

        <include
            android:id="@+id/viewInputPassword"
            layout="@layout/view_input_password"/>

        <include
            android:id="@+id/viewInputPublicKey"
            layout="@layout/view_input_public_key"
            android:visibility="invisible"/>
    </FrameLayout>

    <TextView
        android:id="@+id/nextActionButtonHintText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/password_fragment_proceed_to_encrypt"
        app:layout_constraintEnd_toStartOf="@id/nextActionButton"
        app:layout_constraintBottom_toBottomOf="@id/nextActionButton"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/nextActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/generic_next_action_button_description"
        android:src="@drawable/ic_round_navigate_next_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.Material3.Button" />

</androidx.constraintlayout.widget.ConstraintLayout>